# HPLI

HPLI/: CMakeLists.txt  README.md  main.cpp
HPLI/benchmark/: data_flow.cpp  insert_select_erase_clear.cpp
HPLI/example/: parallel_rebuild.cpp  transformed_test.cpp
HPLI/experiment/: parameters.txt
HPLI/include/: DEFINES.h  DEFINES.h.in  DataSet.hpp  HPLIIndex.hpp  Models.hpp  PreciseIndex.hpp  PreciseSegment.hpp  TimerClock.hpp  experience.hpp  matplotlibcpp.h  plot_utils.hpp
HPLI/workspace/: fit_a_dataset.cpp
